BranchTraceConstructor: new Integer(x) -> Integer.valueOf(x).
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>